<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="player_one_s_turn">Player One\'s Turn</string>
    <string name="single_player">Single Player</string>
    <string name="two_players">Two Players</string>
    <string name="computer_vs_player">Computer vs Player</string>
</resources>
