<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gridImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gridheight"
        android:layout_marginStart="@dimen/grid_margin_side"
        android:layout_marginTop="@dimen/grid_margin_side"
        android:layout_marginEnd="@dimen/grid_margin_side"
        android:layout_marginBottom="@dimen/grid_margin_side"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/headText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/tic_tac_toe"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/gridImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="@dimen/resetWidth"
        android:layout_height="@dimen/resetHeight"
        android:onClick="reset"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/turnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textmargintop"
        android:text="@string/player_one_s_turn"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridImageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/linear_width"
        android:layout_height="@dimen/linear_height"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridImageView">

        <ImageView
            android:id="@+id/imageView0"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/linear_width"
        android:layout_height="@dimen/linear_height"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/linear_width"
        android:layout_height="@dimen/linear_height"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/xosize"
            android:layout_height="@dimen/xosize"
            android:onClick="tapListener"
            android:padding="@dimen/image_padding"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
